--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
 cryptography==3.4.7
 idna==2.10
 psycopg2==2.9.1
 pycparser==2.20
 PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
-python-magic==0.4.24
+pyqt5-tools==5.15.4.3.2
+python-dotenv==0.18.0
+python-magic-bin==0.4.14
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
 requests==2.25.1
+tqdm==4.61.2
 urllib3==1.26.6
